# opus

jnijna/cpp/: .gitignore  CMakeLists.txt
jnijna/cpp/script/: make_jar.bat
jnijna/cpp/src/: jnilibopus.cpp  jnilibopus.h  libopus.cpp  libopus.h
jnijna/interface/: make_jar.bat
jnijna/interface/com/test/: JniOpus.java  LibOpusInterface.java
